--- a/css/main.css
+++ b/css/main.css
@@ -10,6 +10,16 @@ italic {
     font-style: italic;
 }
 
+a {
+    text-decoration: none;
+}
+
+section{
+    padding-top: 2em;
+    padding-bottom: 2em;
+    text-align: center;
+}
+
 section h3 {
     font-size: 1.7em;
     margin-bottom: 0.5em;
@@ -20,19 +30,14 @@ body{
     font-family: 'Montserrat', sans-serif;
 }
 
-a {
-    text-decoration: none;
-}
-
 .dark {
     background-color: rgba(219, 131, 159, 0.932);
-    color: #eba8df;
+    color: #fff;
 }
 
 .light {
     background-color: #f5dfeb;
-    color: #fff;
-    
+    color: #fff;    
 }
 
 .container {
@@ -61,10 +66,18 @@ header li a {
     font-weight: lighter;
     text-transform: uppercase;
     text-shadow: 0.1em 0.1em 0.1em rgb(219, 155, 190);
-    margin-left: 1em;
+    margin-left: 1em;    
 }
 
- 
+header li a:hover {
+    color: #fff    
+}
+
+#sobre img {
+    margin-top: 1.7em;
+    width: 200px;
+    float: right;
+}
 
 #sobre p.bio {
     font-family: 'Elsie Swash Caps', cursive;
@@ -74,8 +87,7 @@ header li a {
 }
 
 #sobre p.text {
-    font-family: 'Montserrat', sans-serif;
-    color: rgb(236, 228, 235);
+    color: #fff;
     margin: 1em;
     text-align: justify;
     line-height: 1.4;
@@ -89,26 +101,18 @@ p {
     font-size: 14;
 }
 
-#sobre img {
-    margin-top: 1.7em;
-    width: 200px;
-    float: right;
+#contato h3 {
+    color: rgb(238, 27, 150);
+    text-shadow: 0.1em 0.1em 0.1em rgb(199, 128, 167);
 }
 
-#contato {
+#contato p {
+    color: rgb(238, 27, 150);
     text-shadow: 0.1em 0.1em 0.1em rgb(199, 128, 167);
 }
 
 #contato li {
     display: inline-block;
-}
-
-#contato h3 {
-    color: rgb(238, 27, 150);
-}
-
-#contato p {
-    color: rgb(238, 27, 150);
 }
 
 #contato li a {
@@ -142,8 +146,4 @@ p {
 footer {
     padding-top: 0.5em;
     padding-bottom: 0.5em;
-}
-
-footer p {
-    color:#fff;
 }
