--- a/css/index.css
+++ b/css/index.css
@@ -1,15 +1,3 @@
-section{
-    padding-top: 2em;
-    padding-bottom: 2em;
-    text-align: center;
-}
-
-section h3 {
-    font-size: 1.7em;
-    margin-bottom: 0.5em;
-    text-transform: uppercase;
-}
-
 
 .imagem-projeto{
     width: 100%;
@@ -29,7 +17,6 @@ section h3 {
 }
 
 .identity h2 {
-    font-family: 'Montserrat', sans-serif;
     font-size: 1.5em;
     font-weight: 200;
 }
@@ -46,11 +33,11 @@ section h3 {
 }
 .projects-header p {
     color: rgb(238, 27, 150);
+    text-shadow: 0.1em 0.1em 0.1em rgb(199, 128, 167);
 }
 
 .projects{
     margin-left: 40%;
-
 }
 
 .projects li {
@@ -64,24 +51,17 @@ section h3 {
     color: #fff;
     font-size: 1.3em;
 }
-
+    
 .projects li p {
-    font-family: 'Montserrat', sans-serif;
-    text-shadow: 0.1em 0.1em 0.1em rgb(219, 155, 190);
-    color: rgb(241, 231, 240);
+    color: #fff;
     margin-top: 0.5em;
     text-align: justify;
     line-height: 1.2;
 }
 
 
-.projects-header h3 {
-    text-shadow: 0.1em 0.1em 0.1em rgb(230, 175, 205);
-}
 
-.projects-header p {
-    text-shadow: 0.1em 0.1em 0.1em rgb(199, 128, 167);
-}
+
 
 
 
